syntax = "proto2";

package proto.basic_response;

message BasicResponseProto {
    required bool success = 1;
}